.um.mutant_output14204
Picked up JAVA_TOOL_OPTIONS: -Duser.language=en
/Users/rainyd4y/projects/SAMutator/seeds/PMD_Validation/bestpractices_PreserveStackTrace/PreserveStackTrace16.java:11: error: class, interface, enum, or record expected
continue;
^
1 error
